--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
         format_sql: true
         use_sql_comments: true
 
+#  redis:
+#    host: localhost
+#    port: 6379
+
 logging:
   level:
     org.hibernate.SQL: debug
